syntax = "proto3";

option java_multiple_files = true;
option java_package = "billing";

service BillingService {
  rpc CreateSubscription (BillingRequest) returns (BillingResponse);
}

message BillingRequest {
  string userId = 1;
  string name = 2;
  string email = 3;
  string planType = 4;
}

message BillingResponse {
  string subscriptionId = 1;
  string status = 2;
}